--- a/html/index.html
+++ b/html/index.html
@@ -11,7 +11,9 @@
     <title>File Servert</title>
 </head>
 <h1>Hello, I am File Server.</h1>
+<img src="photo/1524057866233_image.jpg" alt="icon logo">
 
+1524057866233_image.jpg
 </body>
 
 </html>
