--- a/client/index.html
+++ b/client/index.html
@@ -11,7 +11,7 @@
     <title>File Servert</title>
 </head>
 <h1>Hello, I am File Server(client).</h1>
-
+<img src="photo/1524057866233_image.jpg" alt="icon logo"></img>
 </body>
 
 </html>
